[Anand] Added swagger with all api's
