# src/swagger/swager.json
@@ -42,6 +42,7 @@
                         "name": "Register",
                         "in": "body",
                         "description": "Enter deatails to Register New User",
+                        "required" : false,
                         "schema": 
                         {
                             "$ref": "#/definitions/Register"
@@ -63,14 +64,20 @@
                         "description": "Internal server error"
                     }
                 }
-            }
+            },
+
+            "security": [
+                {
+                  "JWT": []
+                }
+              ]
 
         },
 
         "/users/login": 
         {
 
-            "get": 
+            "post": 
             {
                 "tags": ["REGISTER AND LOGIN"],
                 "description": "Log in User",
@@ -107,7 +114,7 @@
     
         "/users/forget": 
         {
-            "get": 
+            "post": 
             {
                 "tags": ["REGISTER AND LOGIN"],
                 "description": "forget Password",
@@ -173,7 +180,12 @@
                     {
                         "description": "Internal server error"
                     }
-                }
+                },
+                "security": [
+                    {
+                      "JWT": []
+                    }
+                  ]
             }
         },
 
@@ -209,7 +221,12 @@
                     {
                         "description": "Internal server error"
                     }
-                }
+                },
+                "security": [
+                    {
+                      "JWT": []
+                    }
+                  ]
             },
 
             "get": 
@@ -222,6 +239,126 @@
                         "name": "get all",
                         "in": "body",
                         "description": "Get all your notes Using token"
+                    }
+                ],
+                "produces": 
+                [
+                    "application/json"
+                ],
+                "responses": 
+                {
+                    "201": 
+                    {
+                        "description": "New user is created"
+                    },
+                    "500": 
+                    {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                      "JWT": []
+                    }
+                  ]
+            }
+
+
+        },
+
+     
+
+        "/note/{_id}": 
+        {
+            "get": 
+            {
+                "tags": ["NOTE API'S"],
+                "description": "GET NOTE BY ID",
+                "parameters": 
+                [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Get specific note using NoteID and Token"
+                    }
+                ],
+                "produces": 
+                [
+                    "application/json"
+                ],
+                "responses": 
+                {
+                    "201": 
+                    {
+                        "description": "New user is created"
+                    },
+                    "500": 
+                    {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                      "JWT": []
+                    }
+                  ]
+            },
+
+            "put": 
+            {
+                "tags": ["NOTE API'S"],
+                "description": "UPDATE NOTE",
+                "parameters": 
+                [   
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Update specific note using NoteID and Token"
+                        
+                    },
+
+                    {
+                        "name": "Update",
+                        "in": "body",
+                        "description": "Update specific note using NoteID and Token",
+                        "schema": 
+                        {
+                            "$ref": "#/definitions/create_Note"
+                        }
+                    }
+                ],
+                "produces": 
+                [
+                    "application/json"
+                ],
+                "responses": 
+                {
+                    "201": 
+                    {
+                        "description": "New user is created"
+                    },
+                    "500": 
+                    {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                      "JWT": []
+                    }
+                  ]
+            },
+
+            "delete": 
+            {
+                "tags": ["NOTE API'S"],
+                "description": "DELETE NOTE",
+                "parameters": 
+                [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Delete Note Using NoteID and token"
                         
                     }
                 ],
@@ -239,112 +376,12 @@
                     {
                         "description": "Internal server error"
                     }
-                }
-            }
-
-
-        },
-
-     
-
-        "/note:NoteID": 
-        {
-            "get": 
-            {
-                "tags": ["NOTE API'S"],
-                "description": "GET NOTE BY ID",
-                "parameters": 
-                [
+                },
+                "security": [
                     {
-                        "name": "get note",
-                        "in": "body",
-                        "description": "Get specific note using NoteID and Token",
-                        "schema": 
-                        {
-                            "$ref": "#/definitions/Register"
-                        }
+                      "JWT": []
                     }
-                ],
-                "produces": 
-                [
-                    "application/json"
-                ],
-                "responses": 
-                {
-                    "201": 
-                    {
-                        "description": "New user is created"
-                    },
-                    "500": 
-                    {
-                        "description": "Internal server error"
-                    }
-                }
-            },
-            "put": 
-            {
-                "tags": ["NOTE API'S"],
-                "description": "UPDATE NOTE",
-                "parameters": 
-                [
-                    {
-                        "name": "Update",
-                        "in": "body",
-                        "description": "Update specific note using NoteID and Token",
-                        "schema": 
-                        {
-                            "$ref": "#/definitions/Register"
-                        }
-                    }
-                ],
-                "produces": 
-                [
-                    "application/json"
-                ],
-                "responses": 
-                {
-                    "201": 
-                    {
-                        "description": "New user is created"
-                    },
-                    "500": 
-                    {
-                        "description": "Internal server error"
-                    }
-                }
-            },
-
-            "delete": 
-            {
-                "tags": ["NOTE API'S"],
-                "description": "DELETE NOTE",
-                "parameters": 
-                [
-                    {
-                        "name": "Register",
-                        "in": "body",
-                        "description": "Delete Note Using NoteID and token",
-                        "schema": 
-                        {
-                            "$ref": "#/definitions/Register"
-                        }
-                    }
-                ],
-                "produces": 
-                [
-                    "application/json"
-                ],
-                "responses": 
-                {
-                    "201": 
-                    {
-                        "description": "New user is created"
-                    },
-                    "500": 
-                    {
-                        "description": "Internal server error"
-                    }
-                }
+                  ]
             }
 
 
@@ -353,7 +390,7 @@
        
        
 
-        "/note/archive/:NoteID": 
+        "/note/archive/{_id}": 
         {
             "put": 
             {
@@ -362,13 +399,10 @@
                 "parameters": 
                 [
                     {
-                        "name": "Archive",
-                        "in": "body",
-                        "description": "Archive note using NoteID and token",
-                        "schema": 
-                        {
-                            "$ref": "#/definitions/Register"
-                        }
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Archive note using NoteID and token"
+                        
                     }
                 ],
                 "produces": 
@@ -385,11 +419,17 @@
                     {
                         "description": "Internal server error"
                     }
-                }
+                },
+                "security": [
+                    {
+                      "JWT": []
+                    }
+                  ]
+    
             }
-
+            
         },
-        "/note/trash/:NoteID": 
+        "/note/trash/{_id}": 
         {
             "put": 
             {
@@ -398,13 +438,10 @@
                 "parameters": 
                 [
                     {
-                        "name": "Trash",
-                        "in": "body",
-                        "description": "Trash note using NoteID and token",
-                        "schema": 
-                        {
-                            "$ref": "#/definitions/Register"
-                        }
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Trash note using NoteID and token"
+                       
                     }
                 ],
                 "produces": 
@@ -421,14 +458,29 @@
                     {
                         "description": "Internal server error"
                     }
-                }
+                },
+
+                "security": [
+                    {
+                      "JWT": []
+                    }
+                  ]
             }
+            
+
 
         }
 
 
         
     },
+    "securityDefinitions": {
+        "JWT": {
+          "type": "apiKey",
+          "name": "Authorization",
+          "in": "header"
+        }
+      },
 
     "definitions": 
     {
